<resources>
    <string name="app_name">MyPlaylist</string>

    <string name="desc_back_arrow_icon">back arrow icon</string>
    <string name="desc_more_vert_icon">more vert icon</string>
    <string name="desc_album_image">album_image</string>
    <string name="desc_search_icon">search icon</string>
    <string name="desc_add_image_icon">add image icon</string>
    <string name="desc_download_icon">download icon</string>
    <string name="desc_pause_icon">pause icon</string>
    <string name="desc_down_arrow_icon">down arrow icon</string>
    <string name="desc_repeat_icon">repeat icon</string>
    <string name="desc_playlist_icon">playlist icon</string>
    <string name="desc_shuffle_icon">shuffle icon</string>
    <string name="desc_skip_previous_icon">skip previous icon</string>
    <string name="desc_skip_next_icon">skip next icon</string>

    <string name="str_coloring_book">Coloring Book</string>
    <string name="str_chance_the_rapper">Chance the Rapper</string>
    <string name="str_chance_the_rapper_2016">Chance the Rapper · 2016</string>
    <string name="str_tracks">tracks</string>
    <string name="str_dot">·</string>
    <string name="str_14">14</string>
    <string name="str_00_00">00:00</string>
    <string name="str_music_title">No Problem (feat. Lil Wayne and 2 Chainz)</string>
    <string name="str_next_track">Next Track</string>
    <string name="str_blessings">Blessings</string>
    <string name="str_chance_the_rapper_coloring_book">Chance the Rapper - Coloring Book</string>
    <string name="str_03_44">03:44</string>
    <string name="str_01_21">01:21</string>
    <string name="str_lyrics">가사</string>
    <string name="str_introduction">곡 소개</string>
    <string name="str_save">save</string>
    <string name="str_delete">delete</string>
    <string name="str_no_next_track">다음 재생 곡이 없습니다.</string>

    <string name="hint_title">곡 제목</string>
    <string name="hint_artist">아티스트</string>
    <string name="hint_mm_ss">mm:ss</string>
    <string name="hint_lyrics">가사를 입력해 주세요.</string>
    <string name="hint_introduction">자유롭게 곡에 대한 소개를 남겨 주세요.</string>

    <string name="msg_saved">저장되었습니다.</string>
    <string name="msg_deleted">삭제되었습니다.</string>
    <string name="msg_necessary_field_missed">제목 / 아티스트 / 재생 시간은 필수 입력 사항입니다.</string>

    <string-array name="tracks">
        <item>All We Got (feat. Kanye West &amp; Chicago Children\'s Choir)|03:23</item>
        <item>No Problem (feat. Lil Wayne and 2 Chainz)|05:04</item>
        <item>Summer Friends (feat. Jeremih and Francis and the Lights)|04:50</item>
        <item>D.R.A.M. Sings Special|01:41</item>
        <item>Blessings|03:41</item>
        <item>Same Drugs|04:17</item>
        <item>Mixtape (Feat. Young Thug &amp; Lil Yachty)|04:52</item>
        <item>Angles (Feat. Saba)|03:26</item>
        <item>Juke Jam (Feat. Justin Bieber &amp; Towkio)|03:39</item>
        <item>All Night (Feat. Knox Fortune)|02:21</item>
        <item>How Great (Feat. Jay Electronica &amp; My cousin Nicole)|05:37</item>
        <item>Smoke Break (Feat. Future)|03:46</item>
        <item>Finish Line / Drown (Feat. T-Pain, Kirk Franklin, Eryn Allen Kane &amp; Noname)|06:47</item>
        <item>Blessings (Feat. Ty Dolla ＄ign, Raury, BJ The Chicago Kid, Anderson .Paak)|03:50</item>
    </string-array>
</resources>