<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/albumOverview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorAlbumBg"
        android:padding="@dimen/normal_margin_size"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
            android:id="@+id/btnEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/normal_margin_size"
            android:src="@drawable/ic_edit"
            android:background="@android:color/transparent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/imageAlbum"
            android:contentDescription="@string/desc_more_vert_icon" />

        <ImageView
            android:id="@+id/imageAlbum"
            android:layout_width="120dp"
            android:layout_height="0dp"
            android:src="@drawable/coloring_book"
            android:layout_marginTop="@dimen/normal_margin_size"
            android:layout_marginBottom="@dimen/normal_margin_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnEdit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            android:contentDescription="@string/desc_album_image" />

        <TextView
            android:id="@+id/albumName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="@dimen/normal_margin_size"
            android:text="@string/str_coloring_book"
            android:textSize="25sp"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toEndOf="@id/imageAlbum"
            app:layout_constraintTop_toTopOf="@id/imageAlbum"
            app:layout_constraintBottom_toTopOf="@id/artistName"/>

        <TextView
            android:id="@+id/artistName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_chance_the_rapper_2016"
            android:textSize="15sp"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintStart_toStartOf="@id/albumName"
            app:layout_constraintTop_toBottomOf="@id/albumName"/>

        <ImageButton
            android:id="@+id/btnPlus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/desc_add_image_icon"
            android:src="@drawable/ic_add_to_photos"
            app:layout_constraintBottom_toBottomOf="@id/imageAlbum"
            app:layout_constraintStart_toStartOf="@id/albumName"
            app:layout_constraintTop_toBottomOf="@+id/artistName"
            app:layout_constraintVertical_bias="0.9"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normal_margin_size"
            android:background="@android:color/transparent"
            android:contentDescription="@string/desc_download_icon"
            android:src="@drawable/ic_download"
            app:layout_constraintStart_toEndOf="@id/btnPlus"
            app:layout_constraintTop_toTopOf="@id/btnPlus"
            app:layout_constraintBottom_toBottomOf="@id/btnPlus"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/trackStatistics"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/normal_margin_size"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/albumOverview"
        app:layout_constraintBottom_toTopOf="@+id/trackList" >

        <TextView
            android:id="@+id/textTotalTrackNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_14"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:text="@string/str_tracks"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:text="@string/str_dot"/>

        <TextView
            android:id="@+id/textTotalPlayTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:text="@string/str_00_00"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/trackList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/trackStatistics"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:listitem="@layout/item_track" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:src="@drawable/ic_add"
        android:backgroundTint="@color/colorOrange"
        app:borderWidth="0dp"
        app:elevation="15dp"
        app:layout_constraintTop_toBottomOf="@id/albumOverview"
        app:layout_constraintBottom_toBottomOf="@id/albumOverview"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>