<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <data>
        <variable name="track"
            type="com.ellie.myplaylist.controller.tracklist.Track" />

        <variable name="nextTrack"
            type="com.ellie.myplaylist.controller.tracklist.Track" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAlbumBg">

        <ImageView
            android:id="@+id/albumImage"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/coloring_book"
            android:contentDescription="@string/str_coloring_book"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageButton
            android:id="@+id/btnDown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/normal_margin_size"
            android:src="@drawable/ic_arrow_down"
            android:background="@android:color/transparent"
            android:contentDescription="@string/desc_down_arrow_icon"
            app:layout_constraintTop_toTopOf="@id/albumImage"
            app:layout_constraintStart_toStartOf="@id/albumImage"/>

        <ImageButton
            android:id="@+id/btnRepeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/desc_repeat_icon"
            android:src="@drawable/ic_repeat"
            app:layout_constraintTop_toTopOf="@id/musicTitle"
            app:layout_constraintBottom_toBottomOf="@id/artistName"
            app:layout_constraintEnd_toStartOf="@id/musicTitle"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/btnShuffle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/desc_shuffle_icon"
            android:src="@drawable/ic_shuffle"
            app:layout_constraintTop_toTopOf="@id/musicTitle"
            app:layout_constraintBottom_toBottomOf="@id/artistName"
            app:layout_constraintStart_toEndOf="@id/musicTitle"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/musicTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@{track.title}"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:maxLines="1"
            android:ellipsize="end"
            app:layout_constraintTop_toBottomOf="@id/albumImage"
            app:layout_constraintStart_toEndOf="@id/btnRepeat"
            app:layout_constraintEnd_toStartOf="@id/btnShuffle"
            app:layout_constraintBottom_toTopOf="@id/artistName"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintVertical_bias="0.3"/>

        <TextView
            android:id="@+id/artistName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@{track.artist}"
            android:textColor="@android:color/darker_gray"
            android:textSize="15sp"
            android:maxLines="1"
            android:ellipsize="end"
            app:layout_constraintBottom_toTopOf="@+id/progressBar"
            app:layout_constraintEnd_toEndOf="@id/musicTitle"
            app:layout_constraintStart_toStartOf="@id/musicTitle"
            app:layout_constraintTop_toBottomOf="@id/musicTitle" />

        <ImageButton
            android:id="@+id/btnPause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/desc_pause_icon"
            android:src="@drawable/ic_pause"
            app:layout_constraintBottom_toTopOf="@id/progressBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/artistName"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_skip_previous"
            android:background="@android:color/transparent"
            android:contentDescription="@string/desc_skip_previous_icon"
            app:layout_constraintTop_toTopOf="@id/btnPause"
            app:layout_constraintBottom_toBottomOf="@id/btnPause"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnPause"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_skip_next"
            android:background="@android:color/transparent"
            android:contentDescription="@string/desc_skip_next_icon"
            app:layout_constraintTop_toTopOf="@id/btnPause"
            app:layout_constraintBottom_toBottomOf="@id/btnPause"
            app:layout_constraintStart_toEndOf="@id/btnPause"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/totalSeconds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textColor="@android:color/darker_gray"
            android:text="@{track.playTime}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/progressBar"/>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="0dp"
            android:layout_height="5dp"
            android:progress="70"
            android:progressTint="@color/colorOrange"
            android:progressBackgroundTint="@android:color/darker_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/imageAlbumSmall"
            style="@android:style/Widget.ProgressBar.Horizontal" />

        <ImageView
            android:id="@+id/imageAlbumSmall"
            android:layout_width="@dimen/small_album_size"
            android:layout_height="0dp"
            android:src="@drawable/coloring_book"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            android:contentDescription="@string/desc_album_image" />

        <TextView
            android:id="@+id/textNextTrack"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normal_margin_size"
            android:layout_marginEnd="@dimen/normal_margin_size"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:ellipsize="end"
            android:maxLines="1"
            app:text="@{nextTrack}"
            app:layout_constraintBottom_toTopOf="@id/strNextTrack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/imageAlbumSmall"
            app:layout_constraintTop_toTopOf="@id/imageAlbumSmall"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/strNextTrack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_next_track"
            android:textColor="@android:color/darker_gray"
            android:textSize="13sp"
            app:layout_constraintTop_toBottomOf="@id/textNextTrack"
            app:layout_constraintBottom_toBottomOf="@id/imageAlbumSmall"
            app:layout_constraintStart_toStartOf="@id/textNextTrack"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>